--- a/src/assets/styles/mainStyle.css
+++ b/src/assets/styles/mainStyle.css
@@ -5,3 +5,61 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+input:focus {
+    outline: none;
+}
+
+.searchBar {
+    background-color: white;
+    width: 300px;
+    height: 50px;
+    display: flex;
+    border-radius: 20px;
+    border-style: none;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.searchIcon {
+    display: block;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    background: none;
+    color: white;
+}
+
+.searchIcon:hover {
+    color: rgb(0, 0, 94);
+}
+
+.searchResults {
+    background-color: white;
+    width: 300px;
+    position: absolute;
+    z-index: 999;
+    border-radius: 20px;
+    margin-top: 10px;
+}
+
+.searchResults .dataItem {
+    color: darkblue;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 1px;
+}
+
+.searchResults a:hover {
+    color: orangered;
+}
+
+.searchResults a {
+    text-decoration: none;
+}
