--- a/src/assets/styles/mainStyle.css
+++ b/src/assets/styles/mainStyle.css
@@ -1,9 +1,24 @@
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+
 body {
     background: linear-gradient(45deg, rgb(62, 58, 133) 0%, rgb(20, 20, 121) 15%, rgba(0, 212, 255, 1) 100%);
     height: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
+
 }
 
 input:focus {
@@ -62,4 +77,83 @@ input:focus {
 
 .searchResults a {
     text-decoration: none;
+}
+
+.tempSelector {
+    border: none;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    width: 30px;
+    height: 30px;
+    appearance: none;
+    text-align: center;
+    margin-top: 8px;
+}
+
+.tempSelector:focus {
+    outline: 0;
+}
+
+.tempSelector:hover {
+    background-color: rgba(255, 255, 255, 0.85);
+}
+
+.positionButton {
+    background: none;
+    border: none;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    color: white;
+    margin-top: 8px;
+}
+
+table,
+td,
+th,
+tr {
+    background-color: rgba(0, 0, 0, 0) !important;
+}
+
+td,
+tr {
+    color: white;
+}
+
+@media (min-width: 576px) {
+    .card-group.card-group-scroll {
+        overflow-x: auto;
+        flex-wrap: nowrap;
+    }
+}
+
+.card-group.card-group-scroll>.card {
+    flex-basis: 35%;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 25px;
+    margin-top: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.25) 100%);
+    border-radius: 25px;
+    margin-top: 5px;
+    border-width: 0;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(99,99,99);
+    background: radial-gradient(circle, rgba(99,99,99,1) 0%, rgba(82,82,82,1) 100%);
+    border-radius: 25px;
+    margin-top: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    border-radius: 25px;
+    margin-top: 5px;
 }
