--- a/src/assets/styles/mainStyle.css
+++ b/src/assets/styles/mainStyle.css
@@ -71,11 +71,11 @@ input:focus {
     margin-bottom: 1px;
 }
 
-.searchResults a:hover {
+.searchResults p:hover {
     color: orangered;
 }
 
-.searchResults a {
+.searchResults p {
     text-decoration: none;
 }
 
@@ -156,4 +156,20 @@ tr {
     background: #555;
     border-radius: 25px;
     margin-top: 5px;
+}
+
+a {
+    text-decoration: none;
+}
+
+#dayCard{
+    background-color: rgba(255, 255, 255, 0.25);
+    border: none;
+    max-width: 190px !important;
+}
+
+#dayCard:hover{
+    background-color: rgba(0, 0, 0, 0.25);
+    outline: 4px solid rgba(255, 255, 255, 0.5);
+    outline-offset: -4px;
 }
