--- a/src/assets/styles/mainStyle.css
+++ b/src/assets/styles/mainStyle.css
@@ -139,15 +139,16 @@ tr {
 
 #forecast::-webkit-scrollbar-track {
     background: rgb(255, 255, 255);
-    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.25) 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.25) 100%);
     border-radius: 25px;
     margin-top: 5px;
     border-width: 0;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 #forecast::-webkit-scrollbar-thumb {
-    background: rgb(99, 99, 99);
-    background: radial-gradient(circle, rgba(99, 99, 99, 1) 0%, rgba(82, 82, 82, 1) 100%);
+    background: rgb(255, 255, 255, 0.85);
     border-radius: 25px;
     margin-top: 5px;
 }
@@ -158,18 +159,54 @@ tr {
     margin-top: 5px;
 }
 
+/* -------------- */
+
+#hourly::-webkit-scrollbar {
+    width: 5px;
+    height: 15px;
+    border-radius: 25px;
+    margin-top: 5px;
+}
+
+#hourly::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0.25) 100%);
+    border-radius: 25px;
+    margin-top: 5px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-width: 0;
+}
+
+#hourly::-webkit-scrollbar-thumb {
+    background: rgb(255, 255, 255, 0.85);
+    border-radius: 25px;
+    margin-top: 5px;
+}
+
+#hourly::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    border-radius: 25px;
+    margin-top: 5px;
+}
+
 a {
     text-decoration: none;
 }
 
-#dayCard{
+#dayCard {
     background-color: rgba(255, 255, 255, 0.25);
     border: none;
     max-width: 190px !important;
 }
 
-#dayCard:hover{
+#dayCard:hover {
     background-color: rgba(0, 0, 0, 0.25);
     outline: 4px solid rgba(255, 255, 255, 0.5);
     outline-offset: -4px;
+}
+
+#hourCard {
+    border: none;
+    max-width: 190px !important;
 }
